<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/signup_Hobbies"
        android:layout_width="292dp"
        android:layout_height="45dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/hobbies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_Language" />

    <EditText
        android:id="@+id/signup_Language"
        android:layout_width="292dp"
        android:layout_height="45dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_ClassField" />

    <EditText
        android:id="@+id/signup_ClassField"
        android:layout_width="292dp"
        android:layout_height="45dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/classes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_nameField" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="83dp"
        android:hint="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signup_nameField"
        android:layout_width="292dp"
        android:layout_height="45dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/signup_AvailabilitySpinner"
        android:layout_width="202dp"
        android:layout_height="48dp"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="163dp"
        android:entries="@array/availability_array"
        app:layout_constraintBottom_toTopOf="@+id/signupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>