<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/firstFragment"
        android:title="Match"
        android:icon="@drawable/home"/>

    <item
        android:id="@+id/secondFragment"
        android:title="Profile"
        android:icon="@drawable/userprofile"/>

    <item
        android:id="@+id/thirdFragment"
        android:title="Message"
        android:icon="@drawable/message"/>

</menu>